@@ -7,6 +7,9 @@
                                   Changelog
 
 Daniel Stenberg (29 Sep 2008)
+- Ian Lynagh provided a patch that now makes CURLOPT_RANGE work fine for SFTP
+  downloads!
+
 - Maxim Ivanov filed bug report #2107803
   (http://curl.haxx.se/bug/view.cgi?id=2107803) "no CURLINFO_REDIRECT_URL in
   multi mode" together with a patch that fixed the problem.
